simplified index page design to better match sonic junction

--- a/css/jtab-site.css
+++ b/css/jtab-site.css
@@ -1,6 +1,6 @@
 
 body {
-  background: #fff url(../images/bg-black-gradient.jpg) repeat-x fixed top;
+  background: #fff;
   color:#000;
   font-family: helvetica, arial, sans-serif;
 }
@@ -9,39 +9,22 @@ p, div, span, li {
 }
 
 #header {
-  width: 1030px;
+  width: 970px;
   clear: both;
   padding:0 10px;
   margin-bottom:10px;
   color: #FEFAFA;
 }
-#header h1 {
-  color: #FFFF33;
-}
 
-#menu {
-  float: left;
-  position:relative;
-  width: 180px;
-  background-color: transparent;
-  color: #FEFAFA;
-}
-#menu ul {
-  margin-left:10px;
-  padding-left:10px;
-}
-#menu a,
-#menu a:visited,
-#menu a:hover {
-  color: #FEFAFA;
+#header h1, p {
+  color: #555;
 }
   
 
 #content {
-  margin-left: 180px;
   padding:1px 10px 10px;
-  width: 850px;
-  background-color: #F4EFFE;
+  width: 970px;
+  background-color: #FFF;
 }
 
 #footer {
